--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.contextPath=/user-portal
-spring.datasource.url=jdbc:mysql://10.23.80.67:3306/journal
-spring.datasource.username=springboot
-spring.datasource.password=springboot
+#spring.datasource.url=jdbc:mysql://10.23.80.67:3306/journal
+spring.datasource.url=jdbc:mysql://localhost:3306/bigzero
+spring.datasource.username=root
+spring.datasource.password=gjeodud
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
